[tool.poetry]
name = "atlysstockanalysis"
version = "0.1.0"
description = ""
authors = ["Ishank Gupta <ishank.gupta@simpplr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

